--- a/templates/common/button/return_convention_index.html
+++ b/templates/common/button/return_convention_index.html
@@ -1,3 +1,3 @@
-<a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
+<a class="fr-btn  fr-btn--secondary fr-btn--icon-left fr-icon-menu-fill" href="{% url 'conventions:index' %}">
     Retourner à la liste des conventions
 </a>
