--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -26,7 +26,7 @@
                         <li class="{% if convention_form_step > 60 %}active{% endif %} {% if convention_form_step == 60 %}current_step{% endif %}" role="avenant_logements"><div>Logements</div></li>
                         <li class="{% if convention_form_step > 70 %}active{% endif %} {% if convention_form_step == 70 %}current_step{% endif %} {% if convention_form_step == 60 %}after_step{% endif %}" role="avenant_annexes"><div>Annexes</div></li>
                         <li class="{% if convention_form_step > 90 %}active{% endif %} {% if convention_form_step == 90 %}current_step{% endif %} {% if convention_form_step == 70 %}after_step{% endif %}" role="avenant_comments"><div>Commentaires</div></li>
-                        <li class="{% if convention_form_step > 100 %}active{% endif %} {% if convention_form_step == 100 %}current_step{% endif %} {% if convention_form_step == 90 %}after_step{% endif %}" role="avenant_recapitulatif"><div>Récapitulatif</div></li>
+                        <li class="{% if convention_form_step > 100 %}active{% endif %} {% if convention_form_step == 100 %}current_step{% endif %} {% if convention_form_step == 90 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
                     {% endif %}
                 </ul>
             </div>
