--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -18,29 +18,18 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "conventions/common/form_header.html"%}
+        {% include "common/step_progressbar.html"%}
         <div class="fr-container">
             <form method="post" action="">
-                {% csrf_token %}
-
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12">
-                        <div class="apilos-bordered fr-my-3w">
-                            <p class="notes">
-                                <em>Ces informations sont complémentaires et à destination de l’instructeur. Elles ne figureront pas dans le document final de la convention.</em>
-                            </p>
-                            {% include "common/form/input_upload.html" with form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True object_field="convention__comments__"|add:form.uuid.value %}
-                        </div>
-                    </div>
-                </div>
+                {% include "conventions/common/form_comments.html" %}
 
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid %}
                         {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
                     {% else %}
-                        {% include "common/button/noteditable_button.html" with convention=convention %}
+                        {% include "common/button/noteditable_button.html"%}
                     {% endif %}
                 </div>
             </form>
