--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -14,11 +14,18 @@
                                     <h2>{{convention.programme.nom}}</h2>
                                 </a>
                             {% else %}
-                                <h1>
-                                    {% if convention.is_avenant %}
-                                        Avenant -
-                                    {% endif %}
-                                    {{convention.programme.nom}}
+                                {% if convention.is_avenant %}
+                                    <h1>
+                                        Avenant de la convention <a class='fr-link apilos-link fr-h1' href="{% url 'conventions:recapitulatif' convention_uuid=convention.parent.uuid %}"">{{convention.parent.numero}}</a>
+                                    </h1>
+                                    <h2>
+                                        {{convention.programme.nom}}
+                                    </h2>
+                                {% else %}
+                                    <h1>
+                                        {{convention.programme.nom}}
+                                    </h1>
+                                {% endif %}
                                 </h1>
                             {% endif %}
                         </div>
