--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -108,7 +108,7 @@
                                 </th>
                                 <th title="Code postal" scope="col">
                                     CP
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__ville' url_target='conventions:index' %}
+                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__code_postal' url_target='conventions:index' %}
                                 </th>
                                 <th title="Ville" scope="col">
                                     Ville
