--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "conventions/common/form_header.html"%}
+        {% include "common/step_progressbar.html"%}
         <div class="fr-container fr-mb-2w">
             <h2>Visualiser votre convention</h2>
             <div class="fr-col-md-12 fr-py-5w h-80vh">
