--- a/static/css/main.css
+++ b/static/css/main.css
@@ -537,6 +537,10 @@ table.fullwidth {
   margin: 0.1rem!important;
 }
 
+.apilos-link {
+  display: inline!important;
+  text-decoration: none!important;
+}
 /*  */
 .apilos-multiselect {
   --blend: 0deg,0%,68.3%; /*var(--background-contrast-grey-blend);*/
