--- a/templates/common/form/conventionform_header.html
+++ b/templates/common/form/conventionform_header.html
@@ -3,10 +3,10 @@
     </div>
     {% if convention %}
         <div class="fr-col-12">
-            {% include "conventions/common/form_header.html" with convention=convention %}
+            {% include "conventions/common/form_header.html"%}
         </div>
     {% endif %}
     <div class="fr-col-12">
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "common/step_progressbar.html"%}
     </div>
 </div>
