--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -1,27 +1,27 @@
 <div class="fr-col-12 fr-col-lg-6">
     <div role="alert" class="fr-alert fr-alert--info">
         <p class="fr-alert__title">
-            Générer et Télécharger la convention
+            Générer et Télécharger {% if convention.is_avenant %}l'avenant à {% endif %}la convention
         </p>
         {% if not convention.type1and2_configuration_not_needed %}
             <p>
-                Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II</strong>
+                Avant de pouvoir générer un document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %}, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II</strong>
             </p>
             <button class="fr-btn fr-my-1w" disabled>
                 Générer la convention
             </button>
         {% else %}
             <p>
-                Le document de convention sera généré en format docx et téléchargé automatiquement. Pour plus d'information, n'hésitez pas à consulter l'<a class="fr-link" href="https://docs.apilos.beta.gouv.fr/utiliser-la-plateforme/comment-signer-une-convention#generer-la-convention-au-format-word-ou-openoffice" target="_blank">aide en ligne</a>
+                Le document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %} sera généré en format docx et téléchargé automatiquement. Pour plus d'information, n'hésitez pas à consulter l'<a class="fr-link" href="https://docs.apilos.beta.gouv.fr/utiliser-la-plateforme/comment-signer-une-convention#generer-la-convention-au-format-word-ou-openoffice" target="_blank">aide en ligne</a>
             </p>
             <p class="fr-my-2w">
                 <span class="fr-icon-warning-line fr-mr-1w" aria-hidden="true"></span>
-                <strong>Attention, la convention n'est pas encore validée. Ce document ne peut être téléchargé qu'à titre informatif et ne saurait être utilisé comme document finalisé.</strong>
+                <strong>Attention, {% if convention.is_avenant %}l'avenant à {% endif %}la convention n'est pas encore validée. Ce document ne peut être téléchargé qu'à titre informatif et ne saurait être utilisé comme document finalisé.</strong>
             </p>
             <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false">
                 {% csrf_token %}
                 <button class="fr-btn fr-my-1w">
-                    Générer la convention
+                    Générer {% if convention.is_avenant %}l'avenant à {% endif %}la convention
                 </button>
             </form>
         {% endif %}
