--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -4,10 +4,10 @@
             Soumettre au service instructeur
         </p>
         <p>
-            Votre projet de convention est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
+            Votre projet {% if convention.is_avenant %}d'avenant à la {% else %}de {% endif %}convention est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
         </p>
         <p>
-            Si vous avez encore des modifications à apporter au projet de convention, vous pouvez enregistrer la convention et y revenir plus tard.
+            Si vous avez encore des modifications à apporter au projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, vous pouvez enregistrer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} et y revenir plus tard.
         </p>
         <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}" data-turbo="false">
             {% csrf_token %}
