--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "conventions/common/form_header.html"%}
+        {% include "common/step_progressbar.html"%}
         {% if request|is_instructeur %}
             <div class="fr-container fr-pb-5w">
 
